package com.cupk.mapper;

import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import com.cupk.pojo.AiCallLog;
import org.apache.ibatis.annotations.Mapper;

/**
 * AI调用日志 Mapper
 */
@Mapper
public interface AiCallLogMapper extends BaseMapper<AiCallLog> {

}
