package com.cupk.mapper;

import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import com.cupk.pojo.Exam;
import org.apache.ibatis.annotations.Mapper;

/**
 * 测评定义 Mapper
 */
@Mapper
public interface ExamMapper extends BaseMapper<Exam> {
}
