package com.cupk.mapper;

import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import com.cupk.pojo.KnowledgeEdge;
import org.apache.ibatis.annotations.Mapper;

/**
 * 知识点依赖边 Mapper
 */
@Mapper
public interface KnowledgeEdgeMapper extends BaseMapper<KnowledgeEdge> {

}
