package com.cupk.mapper;

import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import com.cupk.pojo.KnowledgeNode;
import org.apache.ibatis.annotations.Mapper;

/**
 * 知识点节点 Mapper
 */
@Mapper
public interface KnowledgeNodeMapper extends BaseMapper<KnowledgeNode> {

}
