package com.cupk.mapper;

import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import com.cupk.pojo.PathDetail;
import org.apache.ibatis.annotations.Mapper;

/**
 * 学习路径详情 Mapper
 */
@Mapper
public interface PathDetailMapper extends BaseMapper<PathDetail> {

}
