package com.cupk.mapper;

import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import com.cupk.pojo.StudyPath;
import org.apache.ibatis.annotations.Mapper;

/**
 * 学习路径 Mapper
 */
@Mapper
public interface StudyPathMapper extends BaseMapper<StudyPath> {

}
