package com.cupk.mapper;

import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import com.cupk.pojo.SysEmailCode;
import org.apache.ibatis.annotations.Mapper;

/**
 * 邮箱验证码 Mapper
 */
@Mapper
public interface SysEmailCodeMapper extends BaseMapper<SysEmailCode> {

}
