package com.cupk.mapper;

import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import com.cupk.pojo.SysNotice;
import org.apache.ibatis.annotations.Mapper;

/**
 * 系统公告 Mapper
 */
@Mapper
public interface SysNoticeMapper extends BaseMapper<SysNotice> {

}
